--- a/hw1/index.html
+++ b/hw1/index.html
@@ -25,28 +25,28 @@
 
                 <section class="google-meet__others">
                     <div class="one google-meet__member">
-                        <img class="google-meet__member-quiet" src="quiet.png" alt="quiet.png">
+                        <img class="google-meet__member-quiet" src="quiet-3.png" alt="quiet.png">
                         <img class="google-meet__member-middle" src="DingDing.jpg" alt="丁丁">
                         <h2 class="google-meet__member-name">丁丁</h2>
                     </div>
                     <div class="two google-meet__member">
                         <img class="google-meet__member-middle" src="Dexi.jpg" alt="迪西">
-                        <img class="google-meet__member-quiet" src="quiet.png" alt="quiet.png">
+                        <img class="google-meet__member-quiet" src="quiet-3.png" alt="quiet.png">
                         <h2 class="google-meet__member-name">迪西</h2>
                     </div>
                     <div class="three google-meet__member">
                         <img class="google-meet__member-middle" src="Lala.jpg" alt="拉拉">
-                        <img class="google-meet__member-quiet" src="quiet.png" alt="quiet.png">
+                        <img class="google-meet__member-quiet" src="quiet-3.png" alt="quiet.png">
                         <h2 class="google-meet__member-name">拉拉</h2>
                     </div>
                     <div class="four google-meet__member">
                         <img class="google-meet__member-middle" src="Xiauboe.jpg" alt="小波">
-                        <img class="google-meet__member-quiet" src="quiet.png" alt="quiet.png">
+                        <img class="google-meet__member-quiet" src="quiet-3.png" alt="quiet.png">
                         <h2 class="google-meet__member-name">小波</h2>
                     </div>
                     <div class="five google-meet__member">
                         <img class="google-meet__member-middle" src="Sun.png" alt="太陽">
-                        <img class="google-meet__member-quiet" src="quiet.png" alt="quiet.png">
+                        <img class="google-meet__member-quiet" src="quiet-3.png" alt="quiet.png">
                         <h2 class="google-meet__member-name">太陽</h2>
                     </div>
                 </section>
